# ATenCo9

./: .gitignore  ANALYSIS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_ISSUES.md  OPTIMIZATION_REPORT.md  README.md  REPAIR_OPTIMIZATION_REPORT.md
.github/agents/: ATenCo9.md
cogint/: CMakeLists.txt  README.md
cogint/9p/: cog9p.c
cogint/api/: cogint_api.c
cogint/atomspace/: cog_atomspace.c
cogint/cmake/: CogIntConfig.cmake.in
cogint/distributed/: cog_distributed.c
cogint/examples/: CMakeLists.txt  cognitive_pipeline.c  distributed_tensor.c  simple_tensor.c  tensornet_decomposition.c
cogint/include/: cog9p.h  cog_atomspace.h  cog_inferno.h  cog_tensornet.h  cogint.h
cogint/tensornet/: cog_decompose.c  cog_distributed_tn.c  cog_tensornet.c
cogint/tests/: CMakeLists.txt  test_9p.c  test_atomspace.c  test_basic.c  test_distributed.c  test_tensor.c  test_tensornet.c
docs/: COMPREHENSIVE_IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_PLAN_9P_SERVER.md  IMPLEMENTATION_PLAN_ATEN_BRIDGE.md  IMPLEMENTATION_PLAN_CUDA.md  IMPLEMENTATION_PLAN_PLN_RULES.md
